2005-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* libgc.vcproj: Project file for libgc.

2005-05-19  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Handle i386-*-linux* as well. Fixes #74960.	

Tue May 3 16:28:26 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* os_dep.c: remove usage of libc private symbol.

2005-05-02  Miguel de Icaza  <miguel@novell.com>

	* pthread_stop_world.c (GC_restart_handler, GC_suspend_handler):
	Wrap the original routines into methods that preserve the value of
	errno.  Fixes #74740

2005-04-18  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Applied another freebsd patch from Bill Middleton (flashdict@gmail.com).

2005-04-15  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Applied another freebsd patch from Bill Middleton (flashdict@gmail.com).

2005-04-11  Zoltan Varga  <vargaz@freemail.hu>

	* include/private/gcconfig.h configure.in os_dep.c dyn_load.c: 
	Applied some freebsd patch from Bill Middleton <flashdict@gmail.com>.

2005-04-06  Zoltan Varga  <vargaz@freemail.hu>

	* solaris_pthreads.c (GC_pthread_detach): Add locking.

	* include/gc_pthread_redirects.h (pthread_detach): Override pthread_detach too.

	* solaris_pthreads.c (GC_pthread_detach): Override pthread_detach too. Fixes
	#74223.

2005-03-29  Zoltan Varga  <vargaz@freemail.hu>

	* os_dep.c: Add ability to fall back to mmap-ing memory when sbrk
	fails.

	* include/private/gcconfig.h: Enable FALLBACK_TO_MMAP on amd64. Fixes
	#73882.

	* config.guess config.sub ltmain.sh: Update these files with more
	up-to-date versions. Fixes #74071.

2005-03-09  Zoltan Varga  <vargaz@freemail.hu>

	* solaris_threads.c (GC_thread_is_registered): Add this for solaris
	too.

	* pthread_support.c (GC_thread_is_registered): Move this outside of
	the #ifdef THREAD_LOCAL_ALLOC.

2005-03-03  Zoltan Varga  <vargaz@freemail.hu>

	* include/gc.h pthread_support.c win32_threads.: Add 
	GC_thread_is_registered API function.

2005-02-17  Raja R Harinath  <rharinath@novell.com>
