@@ -1,3 +1,7 @@
+2005-06-17  Zoltan Varga  <vargaz@freemail.hu>
+
+	* pthread_support.c: Workaround gcc-3.3 compiler bug.
+
 2005-05-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* libgc.vcproj: Project file for libgc.
